--- a/public/repairs.html
+++ b/public/repairs.html
@@ -38,7 +38,7 @@
 			<div class="nav-lists">
 				<ul class="nav-site">
 					<li>
-						<a href="repairs">Repairs</a>
+						<a href="#">Repairs</a>
 					</li>
 					<li>
 						<a href="#">Company</a>
@@ -58,13 +58,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="hero">
-		<a href="#">
-			<img src="../assets/images/front2.webp" width="1425px">
-		</a>
-	</div>
 	<div class="hero2">
-		<div class="container">
+		<div class="wrap">
 			<div class="text">
 	<!-- This is where React will deploy the contents it generates -->
 				<!-- <div id="app"></div> -->
@@ -74,41 +69,29 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
 						<a href="/iphone-repairs">
-							<img class="img-responsive" id="iphone" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/iphone-200x200.png" alt="iPhone Repair"><span class="home-serv-caption">iPhone Repair</span>
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/iphone-200x200.png" alt="iPhone Repair"><span class="home-serv-caption">iPhone Repair</span>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
-						<a href="/google-repairs">
-							<img class="img-responsive" id="google" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/google/pixel-200x200.jpg" alt="Google Repair"><span class="home-serv-caption">Google Repair</span>
+						<a href="#">
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/google/pixel-200x200.jpg" alt="Google Repair"><span class="home-serv-caption">Google Repair</span>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
-						<a href="/tablet-repairs">
-							<img class="img-responsive" id="tablet" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/ipad-200x200.jpg" alt="Tablet Repair"><span class="home-serv-caption">Tablet Repair</span>
+						<a href="#">
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/ipad-200x200.jpg" alt="Tablet Repair"><span class="home-serv-caption">Tablet Repair</span>
 						</a>
 					</div>
 				</div>
 			</div> <!-- ROW -->
 		</div>
 	</div>
-	<div class="container-fluid" id="footer-disclosure">
-		<div class="container">
-			<div class="col-md-9 col-md-offset-3 hidden-xs footer-copy hidden-sm">
-				<span>© 2016 CellSmart, LTD</span>
-				<span>|</span>
-				<a href="#">Privacy</a>
-				<span>|</span>
-				<a href="#">Terms</a>
-			</div>
-		</div>
-		
-	</div>
 
-	<!-- <script src="bundle.js"></script> -->
+	<script src="bundle.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="../assets/js/index.js"></script>
 </body>
