lots of changes to everything

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../public/assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../public/assets/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../public/assets/css/style.css">
 	<title>CellSmart, LTD</title>
 </head>
 
@@ -13,7 +13,7 @@
 	<div class="top-nav">
 		<div class="container">
 		<a class="nav-home" href="/">
-			<img class="nav-logo" src="../assets/images/cellsmart.webp" height="110px" width="130px">
+			<img class="nav-logo" src="../public/assets/images/cellsmart.webp" height="110px" width="130px">
 		</a>
 			<div class="pull-right">
 				<div class="dropdown">
@@ -60,7 +60,7 @@
 	</div>
 	<div class="hero">
 		<a href="#">
-			<img src="../assets/images/front2.webp" width="1425px">
+			<img src="../public/assets/images/front2.webp" width="1425px">
 		</a>
 	</div>
 	<div class="hero2">
@@ -95,6 +95,8 @@
 			</div> <!-- ROW -->
 		</div>
 	</div>
+
+	<!-- FOOTER -->
 	<div class="container-fluid" id="footer-disclosure">
 		<div class="container">
 			<div class="col-md-9 col-md-offset-3 hidden-xs footer-copy hidden-sm">
@@ -109,7 +111,7 @@
 	</div>
 
 	<!-- <script src="bundle.js"></script> -->
-	<script type="text/javascript" src="../assets/js/jquery-3.1.0.min.js"></script>
-	<script type="text/javascript" src="../assets/js/index.js"></script>
+	<script type="text/javascript" src="../public/assets/js/jquery-3.1.0.min.js"></script>
+	<script type="text/javascript" src="../public/assets/js/index.js"></script>
 </body>
 </html>
