--- a/public/iphone-repairs.html
+++ b/public/iphone-repairs.html
@@ -66,25 +66,27 @@
 				<!-- <div id="app"></div> -->
 				<h1>Select Your iPhone</h1>
 			</div>
+
+
 			<div class="row category-container">
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
 						<a href="#">
-							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/iphone-200x200.png" alt="iPhone Repair"><span class="home-serv-caption">iPhone 5</span>
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/apple/iphone/iphone5-200x200.jpg" alt="iPhone 5 Repair"><span class="home-serv-caption">iPhone 5</span>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
 						<a href="#">
-							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/main-cats/iphone-200x200.png" alt="iPhone Repair"><span class="home-serv-caption">iPhone 5s</span>
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/apple/iphone/iphone5s-200x200.jpg" alt="iPhone 5s Repair"><span class="home-serv-caption">iPhone 5s</span>
 						</a>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="service-container">
 						<a href="#">
-							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/google/pixel-200x200.jpg" alt="Google Repair"><span class="home-serv-caption">iPhone 6</span>
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/phones/iphone/6/iphone-6-repair-200x200.png" alt="iPhone 6 Repair"><span class="home-serv-caption">iPhone 6</span>
 						</a>
 					</div>
 				</div>
@@ -95,6 +97,13 @@
 						</a>
 					</div>
 				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="service-container">
+						<a href="#">
+							<img class="img-responsive" src="https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/apple/iphone/iPhone_7-200x200.png" alt="Tablet Repair"><span class="home-serv-caption">iPhone 7 Repair</span>
+						</a>
+					</div>
+				</div>
 			</div> <!-- ROW -->
 		</div>
 	</div>
@@ -102,5 +111,28 @@
 	<script src="bundle.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery-3.1.0.min.js"></script>
 	<script type="text/javascript" src="../assets/js/index.js"></script>
+	<!-- <script type="text/javascript">
+		var array =[
+			{
+				name: 'iphone 5',
+				src: 'https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/apple/iphone/iphone5-200x200.jpg',
+
+			}, 
+			{
+				name: 'iphone 5s',
+				src: 'https://d27ppybfoyyraq.cloudfront.net/image/cache/data/repairs/apple/iphone/iphone5s-200x200.jpg',
+
+			},
+			{
+				name: 'iphone 6',
+				src: 'https://d27ppybfoyyraq.cloudfront.net/image/cache/data/phones/iphone/6/iphone-6-repair-200x200.png',
+
+			}, 
+		]
+		for (var i = 0; i < array.length; i++) {
+			var div = $("<div/>").addClass('col-sm-6 col-md-4')
+			array[i]
+		}
+	</script> -->
 </body>
 </html>
